--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,1 +1,45 @@
 <p>home works!</p>
+<div>
+    <app-header>
+    </app-header>
+</div>l̥
+<div class="main-content">
+    <div class="header-content">
+        <div class="emp-detail-text">
+            Employee Details <div class="emp-count">{{employeeCount}}</div>
+        </div>
+        <a class="add-button" routerLink="/add">
+            <img src="..\assets\assets\icons\add-24px.svg" alt="Add User Logo">Add User
+        </a>
+    </div>
+    <div class="table-main">
+        <table id="table-display" class="table">
+            <tr>
+                <th></th>
+                <th>Name</th>
+                <th>Gender</th>
+                <th>Department</th>
+                <th>Salary</th>
+                <th>Start Date</th>
+                <th>Actions</th>
+            </tr>
+            <tr>
+                <td>
+                    <img class="profile" src="..\assets\assets\profile-images\Ellipse -2.png" alt="">
+                </td>
+                <td>Narayan Mahadevan</td>
+                <td>Male</td>
+                <td>
+                    <div class="dept-label">HR</div>
+                    <div class="dept-label">Finance</div>
+                </td>
+                <td>3000000</td>
+                <td>1 Nov 2020</td>
+                <td>
+                    <img id="1" onclick="remove(this)" src="..\assets\assets\icons\delete-black-18dp.svg" alt="delete">
+                    <img id="1" onclick="update(this)" src="..\assets\assets\icons\create-black-18dp.svg" alt="edit">
+                </td>
+            </tr>
+        </table>
+    </div>
+</div>
