--- a/src/app/component/add/add.component.html
+++ b/src/app/component/add/add.component.html
@@ -1,5 +1,109 @@
-<div>
-    <app-header>
-    </app-header>
+<app-header></app-header>
+
+<div class="form-content">
+  <form class="form" action="#" [formGroup] = "employeeFormGroup" (ngSubmit)="onSubmit()">
+
+    <div class="form-head">Employee Payroll form </div>
+
+    <!-------Input Name--------->
+    <div class="row-content">
+        <mat-label class="label text">Full Name</mat-label>
+        <mat-form-field class="example-full-width" appearance="outline">
+        <input id="name" class="name-input" matInput placeholder="Your Name" formControlName="name">
+      </mat-form-field>
+    </div>
+
+    <!------Profile image---------->
+    <div class="row-content">
+      <label class="label text" for="profile">Profile Image </label>
+      <div class="profile-radio-content">
+        <mat-radio-button name="profile" color="primary"
+          value="../../../assets/assets/profile-images/Ellipse -1.png" ngDefaultControl formControlName="profilePic">
+          <img class="profile" id='image1' src="../../../assets/assets/profile-images/Ellipse -1.png">
+        </mat-radio-button>
+        <mat-radio-button name="profile" color="primary"
+          value="../../../assets/assets/profile-images/Ellipse -2.png" ngDefaultControl formControlName="profilePic">
+          <img class="profile" id='image2' src="../../../assets/assets/profile-images/Ellipse -2.png">
+        </mat-radio-button>
+        <mat-radio-button name="profile" color="primary"
+          value="../../../assets/assets/profile-images/Ellipse -3.png" ngDefaultControl formControlName="profilePic">
+          <img class="profile" id='image3' src="../../../assets/assets/profile-images/Ellipse -3.png">
+        </mat-radio-button>
+        <mat-radio-button name="profile" color="primary"
+          value="../../../assets/assets/profile-images/Ellipse -4.png" ngDefaultControl formControlName="profilePic">
+          <img class="profile" id='image4' src="../../../assets/assets/profile-images/Ellipse -4.png">
+        </mat-radio-button>
+        <mat-radio-button name="profile" color="primary"
+          value="../../../assets/assets/profile-images/Ellipse -5.png" ngDefaultControl formControlName="profilePic">
+          <img class="profile" id='image5' src="../../../assets/assets/profile-images/Ellipse -5.png">
+        </mat-radio-button>
+      </div>
+    </div>
+
+
+    <!-----Input Gender--------->
+    <div class="row-content">
+      <label class="label text" for="gender">Gender</label>
+      <div>
+        <mat-radio-button type="radio" id="male" name="gender" color="primary" value="male" ngDefaultControl formControlName="gender">
+          <label class="text" for="male">Male</label>
+        </mat-radio-button>
+        <mat-radio-button type="radio" id="female" name="gender" color="primary" value="female" ngDefaultControl formControlName="gender">
+          <label class="text" for="female">Female</label>
+        </mat-radio-button>
+      </div>
+    </div>
+
+    <!------Input Department------->
+    <div class="row-content">
+      <label class="label text" for="department">Department</label>
+      <div *ngFor="let department of departments">
+        <mat-checkbox #checkbox class="checkbox" type="checkbox" color="primary" [value]="department.value"
+          (change)="onCheckboxChange($event)">
+          <label class="text">{{department.name}}</label>
+        </mat-checkbox>
+      </div>
+    </div>
+
+    <!-----Input Salary------>
+    <div class="row-content">
+      <label class="label text" for="salary">Choose your Salary </label>
+
+      <mat-slider thumbLabel [displayWith]="formatLabel" #salaryOutput (change)="updateSetting($event)" color="primary"
+      tickInterval="1000" aria-label="units" class="salary-input" name="salary" min="300000" max="500000" step="1000"
+      [value]="salary" formControlName="salary"></mat-slider>
+    </div>
+
+    <!-------Input Date------>
+    <div class="row-content">
+      <label class="label text" for="createdDate"> Start Date </label>
+      <mat-form-field>
+        <input matInput [matDatepicker]="picker" placeholder="Choose a date" formControlName="createdDate">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+    </div>
+
+    <!------Input Notes------->
+    <div class="row-content">
+        <mat-label class="label text">Notes</mat-label>
+        <mat-form-field class="example-full-width" appearance="outline">
+        
+        <textarea matInput id="notes" class="input" name="Notes" placeholder="" style="height:100px" formControlName="note"
+          required></textarea>
+      </mat-form-field>
+    </div>
+
+    <div class="buttonParent">
+      <a routerLink="/home">
+        <button mat-raised-button color="accent" class="resetButton button cancelButton">Cancel</button>
+      </a>
+      <div class="submit-reset">
+        <button mat-raised-button color="accent" type="submit" class="button submitButton">Submit</button>
+        <button mat-raised-button color="accent" type="reset" class="resetButton button">Reset</button>
+      </div>
+    </div>
+
+
+  </form>
 </div>
-<p>add works!</p>
