--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -32,13 +32,14 @@
                     <div class="debt-label" *ngFor="let departments of employee.department">
                         {{departments}}
                     </div>
+                    
                 </td>
                 <td>{{employee.salary}}</td>
                 <td>{{employee.createdDate}}</td>
                 <td>
-                    <img id={{employee.id}} onclick="remove(this)" 
+                    <img id={{employee.empId}} (click)="remove(employee.empId)" 
                     src="..\assets\assets\icons\delete-black-18dp.svg" alt="delete">
-                    <img id={{employee.id}} onclick="update(this)" 
+                    <img id={{employee.empId}} onclick="update(this)" 
                     src="..\assets\assets\icons\create-black-18dp.svg" alt="edit">
                 </td>
             </tr>
