--- a/src/app/component/add/add.component.html
+++ b/src/app/component/add/add.component.html
@@ -17,26 +17,28 @@
     <div class="row-content">
       <label class="label text" for="profile">Profile Image </label>
       <div class="profile-radio-content">
+        <mat-radio-group ngDefaultControl formControlName="profilePic">
         <mat-radio-button name="profile" color="primary"
-          value="../../../assets/assets/profile-images/Ellipse -1.png" ngDefaultControl formControlName="profilePic">
+          value="../../../assets/assets/profile-images/Ellipse -1.png">
           <img class="profile" id='image1' src="../../../assets/assets/profile-images/Ellipse -1.png">
         </mat-radio-button>
         <mat-radio-button name="profile" color="primary"
-          value="../../../assets/assets/profile-images/Ellipse -2.png" ngDefaultControl formControlName="profilePic">
+          value="../../../assets/assets/profile-images/Ellipse -2.png" >
           <img class="profile" id='image2' src="../../../assets/assets/profile-images/Ellipse -2.png">
         </mat-radio-button>
         <mat-radio-button name="profile" color="primary"
-          value="../../../assets/assets/profile-images/Ellipse -3.png" ngDefaultControl formControlName="profilePic">
+          value="../../../assets/assets/profile-images/Ellipse -3.png">
           <img class="profile" id='image3' src="../../../assets/assets/profile-images/Ellipse -3.png">
         </mat-radio-button>
         <mat-radio-button name="profile" color="primary"
-          value="../../../assets/assets/profile-images/Ellipse -4.png" ngDefaultControl formControlName="profilePic">
+          value="../../../assets/assets/profile-images/Ellipse -4.png">
           <img class="profile" id='image4' src="../../../assets/assets/profile-images/Ellipse -4.png">
         </mat-radio-button>
         <mat-radio-button name="profile" color="primary"
-          value="../../../assets/assets/profile-images/Ellipse -5.png" ngDefaultControl formControlName="profilePic">
+          value="../../../assets/assets/profile-images/Ellipse -5.png">
           <img class="profile" id='image5' src="../../../assets/assets/profile-images/Ellipse -5.png">
         </mat-radio-button>
+      </mat-radio-group>
       </div>
     </div>
 
@@ -45,12 +47,14 @@
     <div class="row-content">
       <label class="label text" for="gender">Gender</label>
       <div>
-        <mat-radio-button type="radio" id="male" name="gender" color="primary" value="male" ngDefaultControl formControlName="gender">
+        <mat-radio-group ngDefaultControl formControlName="gender">
+        <mat-radio-button type="radio" id="male" name="gender" color="primary" value="male" >
           <label class="text" for="male">Male</label>
         </mat-radio-button>
-        <mat-radio-button type="radio" id="female" name="gender" color="primary" value="female" ngDefaultControl formControlName="gender">
+        <mat-radio-button type="radio" id="female" name="gender" color="primary" value="female">
           <label class="text" for="female">Female</label>
         </mat-radio-button>
+      </mat-radio-group>
       </div>
     </div>
 
@@ -59,7 +63,7 @@
       <label class="label text" for="department">Department</label>
       <div *ngFor="let department of departments">
         <mat-checkbox #checkbox class="checkbox" type="checkbox" color="primary" [value]="department.value"
-          (change)="onCheckboxChange($event)">
+          (change)="onCheckboxChange($event)" [checked]="department.checked">
           <label class="text">{{department.name}}</label>
         </mat-checkbox>
       </div>
