--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -2,11 +2,12 @@ $color-white: #fff;
 $button-background-color: #82a70c;
 
 .main-content {
-    display: flex;
+    display:flex;
     flex-direction: column;
+    min-height:calc(100vh - 80px);
     background-color: #f7f7f7;
-    padding: 30px 0 10px;
-    box-sizing: border-box;
+    padding:30px 0 10px;
+    box-sizing:border-box;
 
     .header-content {
         display: flex;
@@ -17,94 +18,111 @@ $button-background-color: #82a70c;
         margin: 0 auto;
         padding-bottom: 25px;
 
-        .emp-detail-text {
-            font: normal normal medium 18px/25px Roboto;
+        .emp-detail-text{
+            font: normal normal bold 24px/25px Roboto;
             letter-spacing: 0px;
             color: #42515f;
             opacity: 1;
 
-
             .emp-count {
                 background-color:$button-background-color;
-                color: #ffffff;
-                border-radius: 30%;
-                padding: 2px 2px 0px 2px;
-                margin-left: 10px;
-                font-size: 16px;
-                width: 26px;
+                color:$color-white;
+                border-radius: 42%;
+                font-size:16px;
+                width:26px;
                 text-align: center;
-                display: inline-block;
+                display:inline-block;
             }
         }
 
         .add-button {
-            font: normal normal normal 22px/22px Roboto;
+            font: normal normal normal 22px/29px Roboto;
             letter-spacing: 0px;
-            color: #fff;
+            color: $color-white;
             opacity: 1;
-            background: $button-background-color 0% 0% no-repeat padding-box;
-            border: none;
+            background:$button-background-color 0% 0% no-repeat padding-box;
+            border:none;
             border-radius: 5px;
             padding: 5px 18px;
             outline: none;
             cursor: pointer;
             text-decoration: none;
         }
+              
+    }
+
+    .table-main {
+        width: 80%;
+        margin:0 auto;
+        overflow: auto;
+
+        .table {
+           width: 100%;
+           border-collapse: seperate;
+           border-spacing: 0 4px;
+           min-width: 800px;
+
+           td, th {
+                text-align: left;
+                padding: 7px 16px;
+            }
+            
+            th  {
+                background: #42515F 0% 0% no-repeat padding-box;
+                font: normal normal normal 17px/21px Roboto;
+                letter-spacing: 0px;
+                color:$color-white;
+                text-transform: uppercase;
+                opacity: 2;
+                border: 0px solid #dddddd;
+                width: fit-content;
+                padding: 1.25%;
+            }
+            
+            tr:not(:first-child) {
+                background: $color-white 0% 0% no repeat padding-box;
+                border: 1px solid #e3e3e3;
+                border-radius: 3px;
+            }
+            
+            td {
+                background: $color-white;
+                font : normal normal normal 14px/21px Roboto;
+                letter-spacing: 0px;
+                color: #3d3d3d;
+                opacity: 1;
+            }
+            
+            td:first-child {
+                display: flex;
+                align-items: center;
+            }
+                
+            td img:first-child{
+                margin-left: 10px;
+            }
+                
+            td img {
+                cursor: pointer;
+            }
+
+            td img:last-child{
+                margin-left: auto;
+                margin-inline: 20px;
+            }
+
+            .dept-label {
+                background-color: #e9fea5;
+                border-radius: 50%;
+                width: fit-content;
+                padding: 1px 7px;
+                text-align: center;
+                font-size: 14px;
+                display: inline-table;
+                font-weight: 300;
+                margin-bottom: 8px;
+                margin-inline: 1px;
+            }
+       } 
     }
 }
-.table-main {
-    width: 80%;
-    margin: 0 auto;
-    overflow: auto;
-}
-
-.table {
-    width: 100%;
-    border-collapse: separate;
-    border-spacing: 0 0px;
-    min-width: 800px;
-}
-
-td, th {
-    text-align: left;
-    padding: 5px 8px;
-}
-
-th {
-    background: #42515f 0% 0% no-repeat padding-box;
-    // border-radius: 3px 3px 0px 8px;
-    text-align: left;
-    // font: normal normal medium 18px/24px Roboto;
-    letter-spacing: 0px;
-    color: #ffffff;
-    text-transform: uppercase;
-    opacity: 1;
-    border: 0px solid #dddddd;
-    font-family: 'Roboto', sans-serif;
-}
-
-tr:not(:first-child) {
-    background: #ffffff 0% 0% no-repeat padding-box;
-    border: 1px solid #e3e3e3;
-    border-radius: 3px;
-}
-
-td {
-    font: normal normal normal 14px/21px Roboto;
-    letter-spacing: 0px;
-    color: #3d3d3d;
-    opacity: 1;
-}
-
-td:first-child {
-    display: flex;
-    align-items: center;
-}
-
-td:img:first-child {
-    margin-right: 10px;
-}
-
-td img {
-    cursor: pointer;
-} 
